lab4/out
g++ -std=gnu++17 -g -O0 -Wall -Wextra -Wpedantic -Wshadow -Wold-style-cast -fdiagnostics-color=never -c symbol_table.cpp
symbol_table.cpp: In function ‘std::__cxx11::string dump_attributes(symbol*, int, int)’:
symbol_table.cpp:52:49: warning: unused parameter ‘func_tid’ [-Wunused-parameter]
 string dump_attributes(symbol *sym,int func_tid=0,int struct_tid=0){
                                                 ^
symbol_table.cpp: In function ‘int matching_attrib(symbol*, symbol*)’:
symbol_table.cpp:330:37: error: no matching function for call to ‘std::__cxx11::basic_string<char>::compare(const string*&) const’
       if (p->sname->compare(f->sname))
                                     ^
In file included from /usr/include/c++/7/string:52:0,
                 from /usr/include/c++/7/bitset:47,
                 from symbol_table.cpp:1:
/usr/include/c++/7/bits/basic_string.h:2824:7: note: candidate: int std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::compare(const std::__cxx11::basic_string<_CharT, _Traits, _Alloc>&) const [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>]
       compare(const basic_string& __str) const
       ^~~~~~~
/usr/include/c++/7/bits/basic_string.h:2824:7: note:   no known conversion for argument 1 from ‘const string* {aka const std::__cxx11::basic_string<char>*}’ to ‘const std::__cxx11::basic_string<char>&’
/usr/include/c++/7/bits/basic_string.h:2844:2: note: candidate: template<class _Tp> std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::_If_sv<_Tp, int> std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::compare(const _Tp&) const [with _Tp = _Tp; _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>]
  compare(const _Tp& __svt) const
  ^~~~~~~
/usr/include/c++/7/bits/basic_string.h:2844:2: note:   template argument deduction/substitution failed:
/usr/include/c++/7/bits/basic_string.h:2868:2: note: candidate: template<class _Tp> std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::_If_sv<_Tp, int> std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::compare(std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::size_type, std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::size_type, const _Tp&) const [with _Tp = _Tp; _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>]
  compare(size_type __pos, size_type __n, const _Tp& __svt) const
  ^~~~~~~
/usr/include/c++/7/bits/basic_string.h:2868:2: note:   template argument deduction/substitution failed:
symbol_table.cpp:330:37: note:   candidate expects 3 arguments, 1 provided
       if (p->sname->compare(f->sname))
                                     ^
In file included from /usr/include/c++/7/string:52:0,
                 from /usr/include/c++/7/bitset:47,
                 from symbol_table.cpp:1:
/usr/include/c++/7/bits/basic_string.h:2887:2: note: candidate: template<class _Tp> std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::_If_sv<_Tp, int> std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::compare(std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::size_type, std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::size_type, const _Tp&, std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::size_type, std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::size_type) const [with _Tp = _Tp; _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>]
  compare(size_type __pos1, size_type __n1, const _Tp& __svt,
  ^~~~~~~
/usr/include/c++/7/bits/basic_string.h:2887:2: note:   template argument deduction/substitution failed:
symbol_table.cpp:330:37: note:   candidate expects 5 arguments, 1 provided
       if (p->sname->compare(f->sname))
                                     ^
In file included from /usr/include/c++/7/string:52:0,
                 from /usr/include/c++/7/bitset:47,
                 from symbol_table.cpp:1:
/usr/include/c++/7/bits/basic_string.h:2917:7: note: candidate: int std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::compare(std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::size_type, std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::size_type, const std::__cxx11::basic_string<_CharT, _Traits, _Alloc>&) const [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>; std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::size_type = long unsigned int]
       compare(size_type __pos, size_type __n, const basic_string& __str) const;
       ^~~~~~~
/usr/include/c++/7/bits/basic_string.h:2917:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/7/bits/basic_string.h:2943:7: note: candidate: int std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::compare(std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::size_type, std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::size_type, const std::__cxx11::basic_string<_CharT, _Traits, _Alloc>&, std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::size_type, std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::size_type) const [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>; std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::size_type = long unsigned int]
       compare(size_type __pos1, size_type __n1, const basic_string& __str,
       ^~~~~~~
/usr/include/c++/7/bits/basic_string.h:2943:7: note:   candidate expects 5 arguments, 1 provided
/usr/include/c++/7/bits/basic_string.h:2961:7: note: candidate: int std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::compare(const _CharT*) const [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>]
       compare(const _CharT* __s) const _GLIBCXX_NOEXCEPT;
       ^~~~~~~
/usr/include/c++/7/bits/basic_string.h:2961:7: note:   no known conversion for argument 1 from ‘const string* {aka const std::__cxx11::basic_string<char>*}’ to ‘const char*’
/usr/include/c++/7/bits/basic_string.h:2985:7: note: candidate: int std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::compare(std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::size_type, std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::size_type, const _CharT*) const [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>; std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::size_type = long unsigned int]
       compare(size_type __pos, size_type __n1, const _CharT* __s) const;
       ^~~~~~~
/usr/include/c++/7/bits/basic_string.h:2985:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/7/bits/basic_string.h:3012:7: note: candidate: int std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::compare(std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::size_type, std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::size_type, const _CharT*, std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::size_type) const [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>; std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::size_type = long unsigned int]
       compare(size_type __pos, size_type __n1, const _CharT* __s,
       ^~~~~~~
/usr/include/c++/7/bits/basic_string.h:3012:7: note:   candidate expects 4 arguments, 1 provided
Makefile:55: recipe for target 'symbol_table.o' failed
make: *** [symbol_table.o] Error 1
